--- a/src/application/files/js/package.json
+++ b/src/application/files/js/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "<%= name %>",
-  "version": "<%= version %>",
-  "description": "<%= description %>",
-  "author": "<%= author %>",
+  "name": "nest-babel-starter",
+  "version": "1.0.0",
+  "description": "Nest Babel starter repository",
   "license": "MIT",
   "scripts": {
-    "format": "prettier --write \"**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
+    "format": "prettier --write \"**/*.js\"",
+    "start": "babel-node index.js",
     "start:dev": "nodemon",
-    "prestart:prod": "rm -rf dist && tsc",
-    "start:prod": "node dist/main.js",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json"
@@ -21,34 +18,27 @@
     "@nestjs/testing": "^4.5.5",
     "@nestjs/websockets": "^4.5.8",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^5.5.6",
-    "typescript": "^2.6.2"
+    "rxjs": "^5.4.3"
   },
   "devDependencies": {
-    "@types/express": "^4.0.39",
-    "@types/jest": "^21.1.8",
-    "@types/node": "^9.3.0",
-    "@types/supertest": "^2.0.4",
-    "jest": "^21.2.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "jest": "^22.4.3",
     "nodemon": "^1.14.1",
     "prettier": "^1.11.1",
-    "supertest": "^3.0.0",
-    "ts-jest": "^21.2.4",
-    "ts-node": "^4.1.0",
-    "tsconfig-paths": "^3.1.1",
-    "tslint": "5.3.2"
+    "supertest": "^3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
       "js",
-      "json",
-      "ts"
+      "json"
     ],
     "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
+    "testRegex": ".spec.js$",
     "coverageDirectory": "../coverage"
   }
 }
